# UFACTORY-xArm-7-and-HITBOT-Z-Arm-S922

./: README.md  README_xarm.md  RUN_COMMANDS.txt  launch_dual_arm.sh  launch_hitbot_real.sh  launch_hitbot_sim.sh  launch_xarm_real.sh  launch_xarm_sim.sh  setup.sh
ZARM/: ZARM.urdf
ZARM/meshes/: base.stl  link1.stl  link2.stl  link3.stl  link6.stl
src/cwsfa_hitbot_api/: test_move_api.py
src/dual_arm_config/: CMakeLists.txt  package.xml
src/dual_arm_config/config/: dual_arm.srdf  dual_arm_controllers.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml
src/dual_arm_config/launch/: dual_arm_real.launch.py  dual_arm_sim.launch.py
src/dual_arm_config/rviz/: dual_arm.rviz
src/dual_arm_config/urdf/: dual_arm.urdf.xacro
src/hitbot-api/: main.py
src/hitbot_description/: CMakeLists.txt  package.xml
src/hitbot_description/config/: hitbot_controllers.yaml
src/hitbot_description/launch/: gazebo.launch.py  hitbot_control.launch.py
src/hitbot_description/meshes/: S922-5.stl  S922-6.stl
src/hitbot_description/urdf/: hitbot.urdf  hitbot_real.urdf
src/hitbot_hardware/: CMakeLists.txt  hitbot_hardware_plugin.xml  package.xml
src/hitbot_hardware/include/hitbot_hardware/: hitbot_hardware_interface.hpp  hitbot_tcp_driver.hpp
src/hitbot_hardware/src/: hitbot_hardware_interface.cpp  hitbot_tcp_driver.cpp
src/hitbot_imitation/: README.md  package.xml  requirements.txt  setup.cfg  setup.py
src/hitbot_imitation/config/: retarget.yaml
src/hitbot_imitation/hitbot_imitation/: __init__.py  app_execute.py  app_reconstruct.py  app_retarget.py  types.py
src/hitbot_imitation/hitbot_imitation/demo/: __init__.py  synthetic.py
src/hitbot_imitation/hitbot_imitation/reconstruction/: __init__.py  adapters.py  alignment.py  guided_tracking.py  pipeline.py
src/hitbot_imitation/hitbot_imitation/retargeting/: __init__.py  grasp.py  retarget.py  workspace.py
src/hitbot_imitation/hitbot_imitation/utils/: __init__.py  io.py  se3.py
src/hitbot_imitation/launch/: imitation.launch.py
src/hitbot_imitation/scripts/: execute_moveit.py  reconstruct.py  retarget.py
src/hitbot_imitation/test/: test_pipeline.py
src/hitbot_moveit_config/: CMakeLists.txt  package.xml
src/hitbot_moveit_config/config/: hitbot.srdf  joint_limits.yaml  ompl_planning.yaml
src/hitbot_moveit_config/launch/: moveit_planning.launch.py  moveit_real.launch.py  moveit_rviz.launch.py  test_sequence.launch.py
src/hitbot_moveit_config/src/: test_moveit_sequence.cpp
