<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dual_arm_config</name>
  <version>1.0.0</version>
  <description>Dual-arm MoveIt 2 configuration for xArm 7 + HITBOT Z-Arm S922</description>
  <maintainer email="charan@todo.todo">Charan</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_planners_ompl</exec_depend>
  <exec_depend>moveit_ros_visualization</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>xarm_description</exec_depend>
  <exec_depend>hitbot_description</exec_depend>
  <exec_depend>hitbot_hardware</exec_depend>
  <exec_depend>xarm_api</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
