<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hitbot_imitation</name>
  <version>0.1.0</version>
  <description>
    "Do as I Do" learning-from-human-video imitation pipeline adapted to the
    HITBOT Z-Arm S922 (6-DOF). Reconstructs a 4D hand-object trajectory from a
    monocular RGB video and retargets the object/wrist pose onto the arm's tool
    flange for playback in Gazebo via MoveIt.
  </description>
  <maintainer email="raushan@xprobotics.ai">raushan</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Stage C: execution on the arm via MoveIt + ros2_control -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_kinematics</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>

  <!-- Robot model + simulation + planning configs reused by the launch -->
  <exec_depend>hitbot_description</exec_depend>
  <exec_depend>hitbot_moveit_config</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <!-- Python numerics (perception deps are pip-installed separately; see
       requirements.txt) -->
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-scipy</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
